--- a/Display and Positioning/index.html
+++ b/Display and Positioning/index.html
@@ -19,7 +19,8 @@
   </header>
   
   <div class="welcome">
-    <h1>Welcome to our survey!</h1>
+    <!-- Display property INLINE, for example <strong> -->
+    <h1><strong>Welcome</strong> to our survey!</h1>
     <p>We're looking forward to getting your answers so we can make sure our products and services are the best they can be!</p>
   </div>
 
@@ -108,5 +109,32 @@
     </div>
   </div>
 
+  <!-- Display property BLOCK, for example a FOOTER -->
+  <footer>
+    <h3>Thanks for taking our survey!</h3>
+  </footer>
+
 </body>
 </html>
+
+<!-- display property: inline, block, and inline-block. -->
+
+<!-- INLINE
+  The default display for some elements, such as <em>, <strong>, and <a>, is called inline. 
+  Inline elements have a box that wraps tightly around their content,
+  only taking up the amount of space necessary to display their content
+  and not requiring a new line after each element.
+  The height and width of these elements cannot be specified in the CSS document. -->
+
+<!-- BLOCK 
+  Some elements are not displayed in the same line as the content around them. 
+  These are called block-level elements. 
+  These elements fill the entire width of the page by default, but their width property can also be set
+  Elements that are block-level by default include all levels of heading elements (<h1> through <h6>), <p>, <div> and <footer>.  -->
+
+
+<!-- INLINE-BLOCK
+  The third value for the display property is inline-block.
+  Inline-block display combines features of both inline and block elements.
+  Inline-block elements can appear next to each other and we can specify their dimensions using the width and height properties. 
+  Images are the best example of default inline-block elements. -->
