--- a/Broadway/index.html
+++ b/Broadway/index.html
@@ -4,7 +4,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400, 600" rel="stylesheet" type="text/css"/>
     <link href="style.css" rel="stylesheet" type="text/css"/>
-    <title>Boradway</title>
+    <title>Broadway</title>
   </head>
 
   <body>
